<resources>
    <string name="app_name">Minus-Covid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Minus-Covid</string>
    <string name="nav_header_subtitle">Geolocalizador de COVID-19</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mapa">Mapa</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_general">Resumen</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_about">Sobre nosotros</string>
    <string name="menu_salir">Salir</string>

    <string name="buscar">Buscar</string>
    <string name="selectCommunity">Seleccione una comunidad autónoma</string>

    <string name="description">Bienvenidos a nuestra aplicación de geolocalización del COVID-19 en España.</string>

    <string name="totalCasos">Casos</string>
    <string name="totalCurados">Casos curados</string>
    <string name="totalInfectados">Infectados</string>
    <string name="totalFallecidos">Fallecidos</string>
    <string name="totalEnPlanta">Casos en planta</string>
    <string name="nuevosCasos">Nuevos casos</string>
    <string name="nuevosCurados">Nuevos casos curados</string>
    <string name="nuevosFallecidos">Nuevos fallecidos</string>
    <string name="nuevosCasosEnPlanta">Nuevos casos en planta</string>
    <string name="nuevosCasosEnUCI">Casos en UCI</string>
    <string name="noData">N/A</string>
    <string name="resumen">Resumen de España</string>
</resources>